@@ -61,6 +61,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${commandLineArg.ChooseVM} ${commandLineArg.NativeProvider} --enable-native-access=de.ibapl.jnhw.common</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
