@@ -23,13 +23,6 @@
             <artifactId>de.ibapl.jnhw.common</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
-        <!--dependency>
-            <groupId>de.ibapl.jnhw</groupId>
-            <artifactId>de.ibapl.jnhw.common</artifactId>
-            <version>4.0.0-SNAPSHOT</version>
-            <scope>runtime</scope>
-            <classifier>native</classifier>
-        </dependency-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -54,7 +47,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${commandLineArg.ChooseVM} ${commandLineArg.NativeProvider}</argLine>
+                    <argLine>${commandLineArg.ChooseVM} ${commandLineArg.NativeProvider} --enable-native-access=de.ibapl.jnhw.posix,de.ibapl.jnhw.common,de.ibapl.jnhw.libloader</argLine>
                 </configuration>
             </plugin>
         </plugins>
